# nxdb

./: .gitignore  .gitmodules  common.h  dictionary.zsdic
client/: CMakeLists.txt  compile_commands.json
client-qt/: CMakeLists.txt
client-qt/Include/: memoryedit.h
client-qt/Include/nxdb/: Process.h  Util.h
client-qt/Include/pe/: Util.h
client-qt/Include/pe/Enet/: NetClient.h
client-qt/Source/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  memory.ui  memoryedit.cpp  memoryedit.h  modulelist.cpp  modulelist.h  modulelist.ui  processdockspace.cpp  processdockspace.h  processdockspace.ui
client-qt/Source/pe/: Util.cpp
client-qt/Source/pe/Enet/: NetClient.cpp  ProjectPacketHandler.cpp
client/Include/: types.h
client/Include/pe/: Client.h  DrawData.h  Hash.h  NetworkInput.h  Render.h
client/Include/pe/Enet/: NetClient.h  ProjectPacketHandler.h
client/Source/: main.cpp
client/Source/pe/: Client.cpp  DrawData.cpp  NetworkInput.cpp  Render.cpp
client/Source/pe/Enet/: NetClient.cpp  ProjectPacketHandler.cpp
penet/: CMakeLists.txt  compile_commands.json
penet/Include/pe/Enet/: ArrayPacket.h  Channels.h  DataPacket.h  Hash.h  IPacket.h  Impls.h  PacketHandler.h  Request.h
penet/Include/pe/Enet/Packets/: DataPackets.h  ImGuiDrawDataPacket.h  MemorySubscriptionData.h
penet/Source/pe/Enet/: Request.cpp
sysmodule/: Makefile  sysmodule.json
sysmodule/include/: Client.h  DebuggingSession.h  LogServer.h  MemoryMapMgr.h  ProjectPacketHandler.h  Server.h  TimeProfiler.h  Zstd.h  hash.h  nxdb_imgui_config.h  types.h
sysmodule/lib/: zstd
sysmodule/source/: Zstd.cpp  loop.cpp  loop.h  main.cpp
sysmodule/source/ams/: pm_ams.os.horizon.c  pm_ams.os.horizon.h
sysmodule/source/enet/: Client.cpp  ProjectPacketHandler.cpp  Server.cpp
sysmodule/source/log/: LogServer.cpp
sysmodule/source/net/: Server.cpp
sysmodule/source/nxdb/: Component.cpp  Component.h  DebuggingSession.cpp  DrawDataPack.cpp  DrawDataPack.h  ImGuiLoop.cpp  ImGuiLoop.h  MemoryMapMgr.cpp  MemoryMapMgr.h  Process.cpp  Process.h
sysmodule/source/nxdb/windows/: DebuggingSession.cpp  DebuggingSession.h  DebuggingSessionGui.cpp  MainWindow.cpp  MainWindow.h
